cmake_minimum_required(VERSION 3.26)
project(hw3)

set(CMAKE_CXX_STANDARD 20)

add_executable(best-time-to-buy-and-sell-stock best-time-to-buy-and-sell-stock.cpp)
add_executable(single-number-iii single-number-iii.cpp)
add_executable(unique-binary-search-trees-ii unique-binary-search-trees-ii.cpp)
add_executable(number-of-islands number-of-islands.cpp)
add_executable(redundant-connection-ii redundant-connection-ii.cpp)
