cmake_minimum_required(VERSION 3.26)
project(hw1)

set(CMAKE_CXX_STANDARD 20)

add_executable(longest-repeating-character-replacement longest-repeating-character-replacement.cpp)
add_executable(find-critical-and-pseudo-critical-edges-in-minimum-spanning-tree find-critical-and-pseudo-critical-edges-in-minimum-spanning-tree.cpp)

